# Techlabs_WS2526_Team1

./: .gitignore  Makefile  README.md  orchestrate.py  pyproject.toml
JobMiner/: JobMiner_Linkedin.py  README_JobMiner_scrape_data.md  clean_old_jobs.py
JobMiner/job_data/: Metadata_2026-02-07_01-03-51.json
JobScraper/: JobScraper.ipynb  JobScraper.py  README.md
JobScraper/Extracting_Strategys/: strategy_a_rules_keywords.md  strategy_b_llm_batch.md  strategy_c_section_ml.md
JobScraper/job_data/: Metadata_2026-01-29_07-54-47.json  Metadata_2026-01-29_09-33-23.json  Metadata_2026-02-10_15-24-49.json  Raw_Jobs_LINKEDIN_2026-01-29_09-33-23.csv  Raw_Jobs_LINKEDIN_2026-01-29_09-33-23.json
Manual_check_data_row_101-200/: Manual_check_Combined_job_101-200.csv  Manual_check_Combined_job_101-200.json
Skills_extract/: A_test-skills-3-with-checkpoint.py  README_extract_skills.md  jobs_with_skills_extracted_full.csv  jobs_with_skills_extracted_full.json
backlog/: DECISIONS.md
backlog/blog_post/: Blog_Post.md
cleaningData/: README.md  process_job_files.py
cleaningData/Processed/: processing_log.json
data/: pipeline_progress.json
data/ingestion/: processing_log.json
data/raw/: README.md
documentation/: Annie_journey.md  journey.md
notebooks/: 01_market_overview.ipynb  02_skills_demand.ipynb  03_salary_analysis.ipynb  04_location_insights.ipynb  05_remote_work.ipynb  06_seniority_experience.ipynb  07_benefits_landscape.ipynb  08_language_requirements.ipynb  09_job_seeker_guide.ipynb  10_role_deep_dives.ipynb  11_education_soft_skills.ipynb
scripts/: generate_dashboard_data.py
src/: pipeline_state.py
src/analysis/: ANALYSIS.md  README.md  charts.py  compute.py  filters.py  style.py  utils.py
src/cleaning/: CLEANING.md  README.md  benefit_categorizer.py  categorical_remapper.py  constants.py  location_cleaner.py  missing_values.py  output_formatter.py  pipeline.py  quality_flagger.py  (+3 more)
website/: DASHBOARD.md  index.html  package-lock.json  package.json  tsconfig.app.json  wrangler.jsonc
(+168 files in other folders)
